2013-06-21  Stephen Berman  <stephen.berman@gmx.net>

	* todo-mode.el: Clean up doc strings, comments and prompt strings,
	mainly by changing "Todo" to "todo" when it is not part of a mode
	name or does not begin a sentence.

2013-06-21  Stephen Berman  <stephen.berman@gmx.net>

	* todo-mode.el: Offer to convert legacy file.  Update commentary.
	(todo-show): If a legacy file is found and no new todo file
	exists, offer to convert it and show it.  Restore autoload cookie.
	(todo-convert-legacy-files): Delete unused local variable.
	If todo-directory doesn't exist, create it before writing to file.
	Check format of converted files.  Prompt to show converted todo file.

2013-06-19  Stephen Berman  <stephen.berman@gmx.net>

	* todo-mode.el (todo-convert-legacy-files): Eliminate last change,
	since it couldn't avoid namespace clashes, and instead let local
	variables hold the legacy values used for conversion.  This also
	does not interfere with live todo buffers.

2013-06-19  Stephen Berman  <stephen.berman@gmx.net>

	* todo-mode.el: Rename from todos.el, change all occurrences of
	"todos-" prefix to "todo-" and references to "Todos" to "Todo" or
	"Todo mode".

2013-06-19  Stephen Berman  <stephen.berman@gmx.net>

	* calendar/todo-mode.el: Rename to otodo-mode.el and move to obsolete/.

2013-06-19  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el (todos-convert-legacy-files): Add code to make it work
	after the new version is renamed and has the same namespace as the
	old version.  This also requires there to be no live todo buffers
	when this command is called.

2013-06-18  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el: Reinstate current copyright dates and original
	todo-mode.el author.  Add reference in commentary to legacy file
	format conversion command.
	(todos-legacy-date-time-regexp): Rename from
	todos-todo-mode-date-time-regexp and adjust uses.

2013-06-18  Stephen Berman  <stephen.berman@gmx.net>
